--- a/routes/_components/Nav.html
+++ b/routes/_components/Nav.html
@@ -20,7 +20,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a href='/@{{user.username}}' class="nav-link">
+					<a rel='prefetch' href='/user/{{encodeURIComponent(user.username)}}' class="nav-link">
 						<img src={{user.image}} class="user-pic" alt={{user.username}} /> {{user.username}}
 					</a>
 				</li>
