--- a/routes/article/_ArticleMeta.html
+++ b/routes/article/_ArticleMeta.html
@@ -1,10 +1,10 @@
 <div class="article-meta">
-	<a href='/@{{article.author.username}}'>
+	<a rel='prefetch' href='/user/{{encodeURIComponent(article.author.username)}}'>
 		<img src={{article.author.image}} alt={{article.author.username}} />
 	</a>
 
 	<div class="info">
-		<a href='/@{{article.author.username}}' class="author"> {{article.author.username}}</a>
+		<a rel='prefetch' href='/user/{{encodeURIComponent(article.author.username)}}' class="author"> {{article.author.username}}</a>
 		<span class="date">
 			{{new Date(article.createdAt).toDateString()}}
 		</span>
@@ -12,7 +12,7 @@
 
 	{{#if canModify}}
 		<span>
-			<a href='/editor/{{article.slug}}' class="btn btn-outline-secondary btn-sm">
+			<a rel='prefetch' href='/editor/{{article.slug}}' class="btn btn-outline-secondary btn-sm">
 				<i class="ion-edit"/> Edit Article
 			</a>
 
