--- a/routes/article/_Comment.html
+++ b/routes/article/_Comment.html
@@ -4,11 +4,11 @@
 	</div>
 
 	<div class="card-footer">
-		<a href='/@{{comment.author.username}}' class="comment-author">
+		<a rel='prefetch' href='/user/{{encodeURIComponent(comment.author.username)}}' class="comment-author">
 			<img src={{comment.author.image}} class="comment-author-img" alt={{comment.author.username}} />
 		</a>
 
-		<a href='/@{{comment.author.username}}' class="comment-author">{{comment.author.username}}</a>
+		<a rel='prefetch' href='/user/{{encodeURIComponent(comment.author.username)}}' class="comment-author">{{comment.author.username}}</a>
 
 		<span class="date-posted">
 			{{new Date(comment.createdAt).toDateString()}}
