update to sapper 0.10

--- a/app/template.html
+++ b/app/template.html
@@ -11,6 +11,8 @@
 	<!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
 	<link rel="stylesheet" href="//demo.productionready.io/main.css">
 
+	%sapper.base%
+
 	<style>
 		body {
 			/* prevent scrollbar popin */
@@ -35,7 +37,7 @@
 		</div>
 	</footer>
 
-	<script src='%sapper.main%'></script>
+	%sapper.scripts%
 
 </body>
 </html>
