move user into store

--- a/routes/4xx.html
+++ b/routes/4xx.html
@@ -2,7 +2,7 @@
 	<title>{{error.message}}</title>
 </:Head>
 
-<Layout page='home' :user>
+<Layout page='home'>
 	<div class="home-page">
 
 		<div class="banner">
