--- a/routes/article/_Comment.html
+++ b/routes/article/_Comment.html
@@ -14,7 +14,7 @@
 			{{new Date(comment.createdAt).toDateString()}}
 		</span>
 
-		{{#if user && comment.author.username === user.username}}
+		{{#if $user && comment.author.username === $user.username}}
 			<span class="mod-options">
 				<i class="ion-trash-a" on:click='remove()'></i>
 			</span>
@@ -28,7 +28,8 @@
 	export default {
 		methods: {
 			remove() {
-				const { comment, slug, user } = this.get();
+				const { comment, slug } = this.get();
+				const { user } = this.store.get(); // TODO remove
 
 				api.del(`articles/${slug}/comments/${comment.id}`, user && user.token).then(response => {
 					this.fire('deleted');
