--- a/routes/register/index.html
+++ b/routes/register/index.html
@@ -2,7 +2,7 @@
 	<title>Sign up • Conduit</title>
 </:Head>
 
-<Layout page='register' :user>
+<Layout page='register'>
 	<div class="auth-page">
 		<div class="container page">
 			<div class="row">
@@ -44,12 +44,6 @@
 
 	export default {
 		components: { Layout, ListErrors },
-
-		preload({ session }) {
-			return {
-				user: session ? session.user : auth.user
-			};
-		},
 
 		data() {
 			return {
