--- a/routes/article/_ArticleMeta.html
+++ b/routes/article/_ArticleMeta.html
@@ -29,12 +29,13 @@
 
 	export default {
 		computed: {
-			canModify: (article, user) => user && article.author.username === user.username
+			canModify: (article, $user) => $user && article.author.username === $user.username
 		},
 
 		methods: {
 			remove() {
-				const { user, article } = this.get();
+				const { article } = this.get();
+				const { user } = this.store.get(); // TODO remove
 
 				api.del(`/articles/${article.slug}`, user && user.token).then(response => {
 					goto('/');
