Fixed profile 404 bug

--- a/src/routes/[user]/[view].html
+++ b/src/routes/[user]/[view].html
@@ -35,7 +35,7 @@
 				<div class="articles-toggle">
 					<ul class="nav nav-pills outline-active">
 						<li class="nav-item">
-							<a href='/@{profile.username}' class="nav-link {favorites ? '' : 'active'}">My Articles</a>
+							<a href='/@{profile.username}/articles' class="nav-link {favorites ? '' : 'active'}">My Articles</a>
 						</li>
 
 						<li class="nav-item">
