--- a/src/routes/_components/Nav.html
+++ b/src/routes/_components/Nav.html
@@ -20,7 +20,7 @@
 				</li>
 
 				<li class="nav-item">
-					<a rel='prefetch' href='/@{$user.username}' class="nav-link">
+					<a rel='prefetch' href='/@{$user.username}/articles' class="nav-link">
 						<!-- <img src={$user.image} class="user-pic" alt={$user.username}> -->
 						{$user.username}
 					</a>
