--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-prefetch>
+	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
